Revert "Link Camera"