@@ -2,8 +2,6 @@ package com.carenest.backend.controller;
 
 import com.carenest.backend.dto.camera.CameraConsentResponse;
 import com.carenest.backend.dto.camera.CameraStatusResponse;
-import com.carenest.backend.dto.camera.CameraDeviceResponse;
-import com.carenest.backend.dto.camera.LinkCameraRequest;
 import com.carenest.backend.entity.CameraDevice;
 import com.carenest.backend.entity.CameraSnapshot;
 import com.carenest.backend.service.CameraConsentService;
@@ -14,7 +12,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-import jakarta.validation.Valid;
 
 import java.util.List;
 import java.util.Map;
@@ -47,12 +44,17 @@ public class CameraController {
 
     @PostMapping("/elderly/{elderlyId}/cameras")
     @PreAuthorize("hasRole('FAMILY') and @authz.isOwnerOrLinkedFamily(authentication.principal, #elderlyId)")
-    public ResponseEntity<CameraDeviceResponse> bindCamera(
+    public ResponseEntity<Map<String, Object>> bindCamera(
             @PathVariable Long elderlyId,
-            @Valid @RequestBody LinkCameraRequest body) {
-        CameraDevice device = cameraService.bindCamera(
-            elderlyId, body.deviceSn(), body.label(), body.verificationCode());
-        return ResponseEntity.status(HttpStatus.CREATED).body(CameraDeviceResponse.from(device));
+            @RequestBody Map<String, String> body) {
+        String deviceSn = body.get("deviceSn");
+        String label = body.getOrDefault("label", "Camera");
+        CameraDevice device = cameraService.bindCamera(elderlyId, deviceSn, label);
+        return ResponseEntity.status(HttpStatus.CREATED).body(Map.of(
+                "id", device.getId(),
+                "deviceSn", device.getDeviceSn(),
+                "label", device.getLabel(),
+                "status", device.getStatus().name()));
     }
 
     @DeleteMapping("/cameras/{deviceId}")
@@ -64,9 +66,17 @@ public class CameraController {
 
     @GetMapping("/elderly/{elderlyId}/cameras")
     @PreAuthorize("@authz.isOwnerOrLinkedFamily(authentication.principal, #elderlyId)")
-    public ResponseEntity<List<CameraDeviceResponse>> listCameras(@PathVariable Long elderlyId) {
+    public ResponseEntity<List<Map<String, Object>>> listCameras(@PathVariable Long elderlyId) {
         List<CameraDevice> cameras = cameraService.getCamerasForElderly(elderlyId);
-        return ResponseEntity.ok(cameras.stream().map(CameraDeviceResponse::from).toList());
+        return ResponseEntity.ok(cameras.stream().map(c -> Map.<String, Object>of(
+                "id", c.getId(),
+                "label", c.getLabel(),
+                "deviceSn", c.getDeviceSn(),
+                "status", c.getStatus().name(),
+                "privacyMode", c.isPrivacyMode(),
+                "motionDetectionEnabled", c.isMotionDetectionEnabled(),
+                "snapshotSchedule", c.getSnapshotSchedule() != null ? c.getSnapshotSchedule() : ""))
+                .collect(Collectors.toList()));
     }
 
     @GetMapping("/cameras/{deviceId}/live")
